[project]
name = "blog-to-podcast-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.10",
    "elevenlabs>=1.0.0",
    "fastapi[standard]>=0.135.3",
    "firecrawl-py>=4.6.0",
    "groq>=1.1.2",
    "httpx>=0.28.1",
]
